Actualización de los datos. Añadidos proyectos personales, y cambiadas algunas secciones.

--- a/index.html
+++ b/index.html
@@ -75,88 +75,102 @@
           </p>
         </header>
 
-        <div class="projects-grid">
-          <!-- Proyecto 1 -->
-          <article class="project-card">
-            <div class="project-card__header">
-              <h3 class="project-card__title">Dashboard de Ventas Globales</h3>
-              <p class="project-card__tag">Power BI · SQL</p>
+        <div class="projects-groups">
+          <div class="projects-group">
+            <div class="projects-group__header">
+              <h3 class="projects-group__title">Aplicaciones móviles</h3>
+              <p class="projects-group__subtitle">Apps nativas y backend para experiencias móviles.</p>
             </div>
-            <p class="project-card__description">
-              Desarrollo de un dashboard interactivo para monitorizar rendimiento de ventas
-              por región, canal y línea de producto, con KPIs y alertas tempranas.
-            </p>
-            <ul class="project-card__tech">
-              <li>Power BI</li>
-              <li>SQL Server</li>
-              <li>DAX</li>
-            </ul>
-            <div class="project-card__links">
-              <a href="#" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
-              <a href="#" class="project-card__link" target="_blank" rel="noopener noreferrer">Demo</a>
-            </div>
-          </article>
+            <div class="projects-grid">
+              <!-- Proyecto móvil 1 -->
+              <article class="project-card">
+                <div class="project-card__header">
+                  <h3 class="project-card__title">Proyecto Fin de Grado</h3>
+                  <p class="project-card__tag">Java · Firebase</p>
+                </div>
+                <p class="project-card__description">
+                  Aplicación móvil para seguimiento de ligas andaluzas de tenis de mesa, con autenticación y gestión de resultados.
+                </p>
+                <ul class="project-card__tech">
+                  <li>Java</li>
+                  <li>Firebase</li>
+                  <li>Material Design</li>
+                </ul>
+                <div class="project-card__links">
+                  <a href="https://github.com/JaimeAmuedoJAH/PRY-TFG" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
+                </div>
+              </article>
 
-          <!-- Proyecto 2 -->
-          <article class="project-card">
-            <div class="project-card__header">
-              <h3 class="project-card__title">Análisis de Churn de Clientes</h3>
-              <p class="project-card__tag">Python · Machine Learning</p>
+              <!-- Proyecto móvil 2 -->
+              <article class="project-card">
+                <div class="project-card__header">
+                  <h3 class="project-card__title">Mapeo</h3>
+                  <p class="project-card__tag">Kotlin · PostgreSQL · Render · Spring Boot</p>
+                </div>
+                <p class="project-card__description">
+                  App móvil para planificar y organizar viajes, con backend desplegado en Render y persistencia en PostgreSQL.
+                </p>
+                <ul class="project-card__tech">
+                  <li>Kotlin</li>
+                  <li>PostgreSQL</li>
+                  <li>Render</li>
+                  <li>Spring Boot</li>
+                </ul>
+                <div class="project-card__links">
+                  <a href="https://github.com/JaimeAmuedoJAH/Mapeo" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
+                </div>
+              </article>
             </div>
-            <p class="project-card__description">
-              Modelización de probabilidad de abandono, segmentación de clientes
-              y recomendaciones de retención basadas en patrones de comportamiento.
-            </p>
-            <ul class="project-card__tech">
-              <li>Python</li>
-              <li>Pandas</li>
-              <li>Scikit-learn</li>
-            </ul>
-            <div class="project-card__links">
-              <a href="#" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
-              <a href="#" class="project-card__link" target="_blank" rel="noopener noreferrer">Notebook</a>
-            </div>
-          </article>
+          </div>
 
-          <!-- Proyecto 3 -->
-          <article class="project-card">
-            <div class="project-card__header">
-              <h3 class="project-card__title">Optimización de Inventario</h3>
-              <p class="project-card__tag">Excel · SQL</p>
+          <div class="projects-group">
+            <div class="projects-group__header">
+              <h3 class="projects-group__title">Data Analyst</h3>
+              <p class="projects-group__subtitle">Modelos, dashboards y analítica orientada a negocio.</p>
             </div>
-            <p class="project-card__description">
-              Construcción de modelos para ajustar niveles de stock y reducir roturas,
-              integrando datos de demanda histórica y plazos de proveedor.
-            </p>
-            <ul class="project-card__tech">
-              <li>Excel Avanzado</li>
-              <li>SQL</li>
-              <li>Power Query</li>
-            </ul>
-            <div class="project-card__links">
-              <a href="#" class="project-card__link" target="_blank" rel="noopener noreferrer">Documento</a>
-            </div>
-          </article>
+            <div class="projects-grid">
+              <!-- Proyecto data 1 -->
+              <article class="project-card">
+                <div class="project-card__header">
+                  <h3 class="project-card__title">Trabajo en grupo automatización de tareas</h3>
+                  <p class="project-card__tag">Excel · SQL · Python</p>
+                </div>
+                <p class="project-card__description">
+                  Creación de un script de python que se encargue de automatizar la limpieza de datos y exportación
+                  a un archivo .csv que se utilizara para realizar un dashboard en excel.
+                </p>
+                <ul class="project-card__tech">
+                  <li>Excel Avanzado</li>
+                  <li>SQL</li>
+                  <li>Python</li>
+                </ul>
+                <div class="project-card__links">
+                  <a href="https://github.com/JaimeAmuedoJAH/Data-automatization" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
+                </div>
+              </article>
 
-          <!-- Proyecto 4 -->
-          <article class="project-card">
-            <div class="project-card__header">
-              <h3 class="project-card__title">Monitor de Marketing Digital</h3>
-              <p class="project-card__tag">Google Data Studio</p>
+              <!-- Proyecto data 2 -->
+              <article class="project-card">
+                <div class="project-card__header">
+                  <h3 class="project-card__title">Extracción y análisis de datos Sakila</h3>
+                  <p class="project-card__tag">MySQL · Python · Jupyter Notebook · Excel</p>
+                </div>
+                <p class="project-card__description">
+                  ETL de la base de datos Sakila, extracción de datos y análisis de datos con python y excel. 
+                  Limpieza de datos en MySQL y análisis de datos con python y excel.
+                </p>
+                <ul class="project-card__tech">
+                  <li>MySQL</li>
+                  <li>Python</li>
+                  <li>Jupyter Notebook</li>
+                  <li>Excel</li>
+                </ul>
+                <div class="project-card__links">
+                  <a href="https://github.com/JaimeAmuedoJAH/consulta-analisis-datos-sakila" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
+                </div>
+              </article>
             </div>
-            <p class="project-card__description">
-              Consolidación de datos de campañas (Ads, Social, Email) en un único dashboard,
-              midiendo ROAS, CPL y embudos de conversión.
-            </p>
-            <ul class="project-card__tech">
-              <li>Google Data Studio</li>
-              <li>Google Analytics</li>
-              <li>APIs</li>
-            </ul>
-            <div class="project-card__links">
-              <a href="#" class="project-card__link" target="_blank" rel="noopener noreferrer">Reporte</a>
-            </div>
-          </article>
+          </div>
         </div>
       </div>
     </section>
@@ -178,6 +192,24 @@
             con conocimientos de frameworks como Jetpack Compose y Spring Boot,
             y conocimientos de bases de datos SQL y NoSQL.
           </p>
+          <div class="about__actions">
+            <a
+              class="btn btn--primary"
+              href="https://drive.google.com/file/d/1dMvPth24oxPCFkRTMGAMpWU7uETzMr0H/view?usp=drive_link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              CV analista
+            </a>
+            <a
+              class="btn btn--primary"
+              href="https://drive.google.com/file/d/1YFRPHyQRqdLPJ_2HGE1EdVdUTVQ0GURu/view?usp=drive_link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              cv Android
+            </a>
+          </div>
         </div>
 
         <div class="about__skills">
