Actualización portfolio, sección proyectos

--- a/index.html
+++ b/index.html
@@ -169,6 +169,27 @@
                   <a href="https://github.com/JaimeAmuedoJAH/consulta-analisis-datos-sakila" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
                 </div>
               </article>
+
+               <!-- Proyecto data 2 -->
+              <article class="project-card">
+                <div class="project-card__header">
+                  <h3 class="project-card__title">Análisis EDA</h3>
+                  <p class="project-card__tag">Python · Jupyter Notebook · EDA</p>
+                </div>
+                <p class="project-card__description">
+                  Análisis exhaustivo de dataset acerca de covid-19, con la realización de un notebook y 
+                  presentación de un informe ejecutivo (EDA), sobre los datos mostrados.
+                </p>
+                <ul class="project-card__tech">
+                  <li>Python</li>
+                  <li>Jupyter Notebook</li>
+                  <li>EDA</li>
+                </ul>
+                <div class="project-card__links">
+                  <a href="https://github.com/JaimeAmuedoJAH/P5-Analisis-Exploratorio-de-Datos-G6" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
+                </div>
+              </article>
+
             </div>
           </div>
         </div>
