--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
               </article>
 
-               <!-- Proyecto data 2 -->
+               <!-- Proyecto data 3 -->
               <article class="project-card">
                 <div class="project-card__header">
                   <h3 class="project-card__title">Análisis EDA</h3>
@@ -187,6 +187,26 @@
                 </ul>
                 <div class="project-card__links">
                   <a href="https://github.com/JaimeAmuedoJAH/P5-Analisis-Exploratorio-de-Datos-G6" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
+                </div>
+              </article>
+
+               <!-- Proyecto data 4 -->
+              <article class="project-card">
+                <div class="project-card__header">
+                  <h3 class="project-card__title">Análisis negocio airbnb</h3>
+                  <p class="project-card__tag">Power BI · Excel · ETL</p>
+                </div>
+                <p class="project-card__description">
+                  Análisis exhaustivo de dataset acerca de airbnb, con el análisis y estudio de los alojamientos y distintos kpis acerca
+                  de la empresa.
+                </p>
+                <ul class="project-card__tech">
+                  <li>Power BI</li>
+                  <li>Excel</li>
+                  <li>ETL</li>
+                </ul>
+                <div class="project-card__links">
+                  <a href="https://github.com/JaimeAmuedoJAH/Analisis_negocio_airbnb" class="project-card__link" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
                 </div>
               </article>
 
