--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="about__actions">
             <a
               class="btn btn--primary"
-              href="https://drive.google.com/file/d/194kbkgpU2ofUzpDuWYJH9-UvIf2oPVd5/view?usp=drive_link"
+              href="https://drive.google.com/file/d/194kbkgpU2ofUzpDuWYJH9-UvIf2oPVd5/view"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -244,7 +244,7 @@
             </a>
             <a
               class="btn btn--primary"
-              href="https://drive.google.com/file/d/1L4k5XX-cGzUN9q5NDWg6EhLAAnjK3K4G/view?usp=drive_link"
+              href="https://drive.google.com/file/d/1wHyJVDmbuFiVxfcjLkr1q2CDtlq7n7eO/view"
               target="_blank"
               rel="noopener noreferrer"
             >
